--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST = localhost
-DB_NAME = amusementpartk_tut
-DB_USER = root
-DB_PASS = ''
+DB_NAME = amusementpark
+DB_USER = project
+DB_PASS = 'sara123'
 
 JWT_SECRET=mysecretkey123
